# certamen

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  SERVING.md  example_quiz.yaml  flake.nix  main.cpp  vcpkg.json
.github/workflows/: build_and_release.yml  cmake-multi-platform.yml
nix/: package.nix  shell.nix
src/: app.hpp  banner.hpp  main.cpp  model.cpp  model.hpp  nav.hpp  serve.cpp  serve.hpp  session.cpp  session.hpp  syntax.hpp
src/screens/: add_question.cpp  add_question.hpp  change_answer.cpp  change_answer.hpp  edit_choice.cpp  list_questions.cpp  list_questions.hpp  load_quiz.cpp  manual.cpp  manual.hpp  menu.cpp  menu.hpp  pick_file.cpp  pick_file.hpp  quit_confirm.cpp  quit_confirm.hpp  quiz.cpp  quiz.hpp  quiz_result.cpp  quiz_result.hpp  remove_question.cpp  remove_question.hpp  save_confirm.cpp  save_confirm.hpp  set_metadata.cpp
